# cosy-gameapi

./: Cargo.toml  README.md
.github/workflows/: ci.yml  clippy.yml  release.yml
argo/: deployment.yaml  ingress.yaml  service.yaml
docker/: Dockerfile  docker-compose.yaml
src/: global_state.rs  lib.rs  main.rs
src/model/: asset.rs  game.rs  mod.rs  response.rs  steamgriddb_models.rs
src/routes/: assets.rs  games.rs  mod.rs
src/services/: mod.rs  steamgriddb_service.rs
tests/: games.rs  steamgriddb_service.rs
