[package]
name = "cosy-gameapi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
steamgriddb_api = "0.3.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
